# spineviewer-love

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  README_zh.md
cmake/: SpineLoveDeps.cmake
main/: CMakeLists.txt  bitmap_io.cpp  bitmap_io.h  frame_capture.cpp  frame_capture.h  frame_export_service.cpp  frame_export_service.h  hw_caps.cpp  hw_caps.h  json_extract.cpp  json_extract.h  media_mux.cpp  media_mux.h  mf_media_player.cpp  mf_media_player.h  render_handle.h  render_setup.cpp  render_setup.h  shell_dialog_service.cpp  shell_dialog_service.h  sl_entry_point.cpp  sl_font_provider.cpp  sl_font_provider.h  sl_gfx_pixelmap.cpp  sl_gfx_pixelmap.h  sl_path_util.cpp  sl_path_util.h  sl_platform_pch.h  sl_string_ops.h  sl_text_codec.cpp  sl_text_codec.h  sl_timer.cpp  sl_timer.h  spine_runtime_registry.cpp  spine_runtime_registry.h  viewer_window.cpp  viewer_window.h
main/dxlib/: CMakeLists.txt
main/dxlib/backend_c/: controller.cpp  controller.h  drawable.cpp  drawable.h  loader.cpp  loader.h  player.cpp  player.h
main/dxlib/backend_c/Spine21/: dxlib_spine_c_21.cpp  dxlib_spine_c_21.h  sp21_skeleton_binary.c
main/dxlib/backend_c/Spine21/spine/: SkeletonBinary.h  spine.h
main/dxlib/backend_c/Spine34/: dxlib_spine_c_34.cpp  dxlib_spine_c_34.h
main/dxlib/backend_cpp/: controller.cpp  controller.h  drawable.cpp  drawable.h  loader.cpp  loader.h  player.cpp  player.h
main/dxlib/shared/: dll_bridge.cpp  dll_bridge.h  dll_entry.cpp  dll_entry.h  file_checker.cpp  file_checker.h  slot_mesh_data.h
main/imgui/: custom_titlebar.cpp  custom_titlebar.h  i18n.h  spine_panel.cpp  spine_panel.h  ui_core.cpp  ui_core.h
main/imgui/lang/: ja_JP.txt  ko_KR.txt  zh_CN.txt  zh_TW.txt
main/sl-widgets/: sl_app_menu.cpp  sl_app_menu.h  sl_dlg_builder.cpp  sl_dlg_builder.h  sl_font_config.cpp  sl_font_config.h  sl_spine_config.cpp  sl_spine_config.h  sl_win_controls.cpp  sl_win_controls.h
main/spine/c-3.4/src/spine/: Animation.c  AnimationState.c  AnimationStateData.c  Atlas.c  AtlasAttachmentLoader.c  Attachment.c  AttachmentLoader.c  Bone.c  BoneData.c  BoundingBoxAttachment.c  Event.c  EventData.c  IkConstraint.c  IkConstraintData.c  MeshAttachment.c  PathAttachment.c  PathConstraint.c  PathConstraintData.c  RegionAttachment.c  Skeleton.c  SkeletonBinary.c  SkeletonBounds.c  SkeletonData.c  SkeletonJson.c  Skin.c  Slot.c  SlotData.c  TransformConstraint.c  TransformConstraintData.c  VertexAttachment.c  extension.c
main/spine/c-3.5/include/spine/: extension.h
main/spine/c-3.5/src/spine/: extension.c
main/spine/cpp-3.8/src/spine/: SkeletonBinary.cpp  SkeletonJson.cpp  Triangulator.cpp
main/spine/cpp-4.2/include/spine/: Animation.h  AnimationState.h  AnimationStateData.h  Atlas.h  AtlasAttachmentLoader.h  Attachment.h  AttachmentLoader.h  AttachmentTimeline.h  BlockAllocator.h  Bone.h  BoneData.h  BoundingBoxAttachment.h  ClippingAttachment.h  Color.h  ColorTimeline.h  ConstraintData.h  ContainerUtil.h  CurveTimeline.h  Debug.h  DeformTimeline.h  DrawOrderTimeline.h  Event.h  EventData.h  EventTimeline.h  Extension.h  HasRendererObject.h  HashMap.h  IkConstraint.h  IkConstraintData.h  IkConstraintTimeline.h  InheritTimeline.h  Json.h  LinkedMesh.h  Log.h  MathUtil.h  MeshAttachment.h  PathAttachment.h  PathConstraint.h  PathConstraintData.h  PathConstraintMixTimeline.h  (+37 more)
main/spine/cpp-4.2/src/spine/: Animation.cpp  AnimationState.cpp  AnimationStateData.cpp  Atlas.cpp  AtlasAttachmentLoader.cpp  Attachment.cpp  AttachmentLoader.cpp  AttachmentTimeline.cpp  Bone.cpp  BoneData.cpp  BoundingBoxAttachment.cpp  ClippingAttachment.cpp  ColorTimeline.cpp  ConstraintData.cpp  CurveTimeline.cpp  DeformTimeline.cpp  DrawOrderTimeline.cpp  Event.cpp  EventData.cpp  EventTimeline.cpp  Extension.cpp  IkConstraint.cpp  IkConstraintData.cpp  IkConstraintTimeline.cpp  InheritTimeline.cpp  LinkedMesh.cpp  Log.cpp  MathUtil.cpp  MeshAttachment.cpp  PathAttachment.cpp  PathConstraint.cpp  PathConstraintData.cpp  PathConstraintMixTimeline.cpp  PathConstraintPositionTimeline.cpp  PathConstraintSpacingTimeline.cpp  PhysicsConstraint.cpp  PhysicsConstraintData.cpp  PhysicsConstraintTimeline.cpp  PointAttachment.cpp  RTTI.cpp  (+24 more)
